--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -1807,6 +1807,14 @@ botania {
     B:alchemyCatalyst=true
     B:alfheimPortal=false
     B:altar=false
+    B:altar.1=false
+    B:altar.2=false
+    B:altar.3=false
+    B:altar.4=false
+    B:altar.5=false
+    B:altar.6=false
+    B:altar.7=false
+    B:altar.8=false
     B:bifrost=false
     B:biomeStoneA=true
     B:biomeStoneA.1=true
@@ -1912,6 +1920,7 @@ botania {
     B:biomeStoneB7Slab=false
     B:biomeStoneB7SlabFull=true
     B:biomeStoneB7Stairs=false
+    B:blazeBlock=true
     B:brewery=false
     B:buriedPetals=false
     B:buriedPetals.1=false
@@ -1932,6 +1941,7 @@ botania {
     B:conjurationCatalyst=true
     B:corporeaFunnel=false
     B:corporeaIndex=false
+    B:corporeaInterceptor=false
     B:customBrick=true
     B:customBrick.1=true
     B:customBrick.10=true
@@ -3869,6 +3879,10 @@ dcsapplemilk {
     B:defeatedcrowchalcedonyLamp.7=false
     B:defeatedcrowchalcedonyLamp.8=false
     B:defeatedcrowchalcedonyLamp.9=false
+    B:defeatedcrowchalcedonyLampOp=true
+    B:defeatedcrowchalcedonyLampOp.1=true
+    B:defeatedcrowchalcedonyLampOp.2=true
+    B:defeatedcrowchalcedonyLampOp.3=true
     B:defeatedcrowchalcedonyPanel=false
     B:defeatedcrowchocolateGift=false
     B:defeatedcrowchocolateGift.1=false
@@ -3992,6 +4006,7 @@ dcsapplemilk {
     B:defeatedcrowwipeBox=false
     B:defeatedcrowwipeBox.1=false
     B:defeatedcrowwipeBox2=false
+    B:defeatedcrowwoodPanel=false
     B:defeatedcrowyuzuBatContainer=false
     B:defeatedcrowyuzuFence=false
 }
@@ -6369,6 +6384,7 @@ malisisdoors {
     B:forcefieldDoor=false
     B:garagedoor=false
     B:ironslidingdoor=false
+    B:irontrapdoor=false
     B:jaildoor=false
     B:laboratorydoor=false
     B:mixedblock=false
@@ -6377,6 +6393,7 @@ malisisdoors {
     B:rustyHatch=false
     B:rustyLadder=false
     B:shojidoor=false
+    B:slidingtrapdoor=false
     B:vanishingblock=false
     B:vanishingblock.1=false
     B:vanishingblock.2=false
@@ -7132,9 +7149,13 @@ plantmegapack {
     B:bambooWetForestSlab=false
     B:bambooWetForestSlabDouble=true
     B:bambooWetForestStairs=false
+    B:beachButtonSage=false
     B:beachHighTideBush=false
+    B:beachPrideOfMadeira=false
     B:beachSeaLavender=false
+    B:beachSeaLymeGrass=false
     B:beachSeaSandwort=false
+    B:beachShowyAster=false
     B:berrybushBeauty=false
     B:berrybushBlack=false
     B:berrybushBlue=false
@@ -7159,16 +7180,25 @@ plantmegapack {
     B:coralPillar=false
     B:coralSunPolyps=false
     B:cropBeet=false
+    B:cropBellPepperOrange=false
+    B:cropBellPepperRed=false
     B:cropBellPepperYellow=false
+    B:cropBroccoli=false
+    B:cropCassava=false
     B:cropCelery=false
     B:cropCentella=false
     B:cropCorn=false
     B:cropCucumber=false
+    B:cropEggplant=false
+    B:cropGreenBeans=false
     B:cropLaksaLeaf=false
+    B:cropLeek=false
     B:cropLettuce=false
     B:cropOnion=false
+    B:cropPeanut=false
     B:cropRice=false
     B:cropSacredLotus=false
+    B:cropSorrel=false
     B:cropSpinach=false
     B:cropTaro=false
     B:cropTomato=false
@@ -7412,22 +7442,29 @@ plantmegapack {
     B:flowerYellowToadflax=false
     B:forestArcticGentian=false
     B:forestAustralianBugle=false
+    B:forestBloodroot=false
     B:forestBroadleafMeadowsweet=false
     B:forestDeadnettle=false
     B:forestDeceivingTrillium=false
     B:forestFairySlipper=false
+    B:forestGiantAngelica=false
     B:forestHorseweed=false
     B:forestKneelingAngelica=false
     B:forestLilyoftheValley=false
+    B:forestLongBractedOrchid=false
+    B:forestMerrybells=false
     B:forestNorthernPitcherPlant=false
     B:forestPinesap=false
     B:forestRedHelleborine=false
     B:forestSalal=false
+    B:forestSpringVetchling=false
     B:forestVanillaLeaf=false
     B:forestWesternWallflower=false
     B:forestWildColumbine=false
     B:forestWildMint=false
     B:forestWolfsFootClubmoss=false
+    B:forestWoodlandKnotweed=false
+    B:forestYellowLadySlipper=false
     B:fungusBlackPowderpuff=false
     B:fungusChanterelle=false
     B:fungusDeathCap=false
@@ -7440,6 +7477,7 @@ plantmegapack {
     B:grassBlueWheatgrass=false
     B:grassCord=false
     B:grassFountain=false
+    B:grassMaiden=false
     B:grassMeadow=false
     B:grassMeadowFoxtail=false
     B:grassPrairie=false
