--- a/config/Botania.cfg
+++ b/config/Botania.cfg
@@ -1,6 +1,9 @@
 # Configuration file
 
 general {
+    # Set this to false to disable the 1.8 Stones available as mana alchemy recipes. This only disables the recipes and entries. Old ones that are already in the world will stay.
+    B:18stones.enabled=true
+
     # Set this to false to disable rendering of baubles in the player.
     B:baubleRender.enabled=true
 
