--- a/config/DCsAppleMilk.cfg
+++ b/config/DCsAppleMilk.cfg
@@ -19,6 +19,9 @@
 ##########################################################################################################
 
 "difficulty setting" {
+    # Enable Recipes added the another mod machines.
+    B:"Another Mod Recipe"=true
+
     # Change difficulty of the battery charge amount.
     # 0:sweet 1:normal 2:bitter 3:hard
     I:"Battery Charge Gen"=1
