--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -1,5 +1,13 @@
 # Configuration file
 
+amtgen {
+    B:fuelGenerator=false
+    B:lpTransformer=false
+    B:manaTransformer=false
+    B:solarGenerator=false
+}
+
+
 appliedenergistics2 {
     B:tileBlockCellWorkbench=false
     B:tileBlockCharger=false
@@ -58,6 +66,123 @@ appliedenergistics2 {
     B:tileSkyStoneBrickStairBlock=false
     B:tileSkyStoneSmallBrickStairBlock=false
     B:tileSkyStoneStairBlock=false
+}
+
+
+atum {
+    B:tileburningTrap=false
+    B:tilecarvedBrick=true
+    B:tilechestSpawner=false
+    B:tilecoalOre=true
+    B:tilecobble=true
+    B:tilecobbleStairs=false
+    B:tilecrackedLargeBrick=true
+    B:tilecrystalGlass=false
+    B:tilecrystalStainedGlass=false
+    B:tilecrystalStainedGlass.1=false
+    B:tilecrystalStainedGlass.10=false
+    B:tilecrystalStainedGlass.11=false
+    B:tilecrystalStainedGlass.12=false
+    B:tilecrystalStainedGlass.13=false
+    B:tilecrystalStainedGlass.14=false
+    B:tilecrystalStainedGlass.15=false
+    B:tilecrystalStainedGlass.2=false
+    B:tilecrystalStainedGlass.3=false
+    B:tilecrystalStainedGlass.4=false
+    B:tilecrystalStainedGlass.5=false
+    B:tilecrystalStainedGlass.6=false
+    B:tilecrystalStainedGlass.7=false
+    B:tilecrystalStainedGlass.8=false
+    B:tilecrystalStainedGlass.9=false
+    B:tiledate=false
+    B:tilediamondOre=true
+    B:tiledoubleSlab=true
+    B:tilefertileSoil=false
+    B:tilefertileSoilTilled=false
+    B:tileflax=false
+    B:tileframedGlass=false
+    B:tileframedStainedGlass=false
+    B:tileframedStainedGlass.1=false
+    B:tileframedStainedGlass.10=false
+    B:tileframedStainedGlass.11=false
+    B:tileframedStainedGlass.12=false
+    B:tileframedStainedGlass.13=false
+    B:tileframedStainedGlass.14=false
+    B:tileframedStainedGlass.15=false
+    B:tileframedStainedGlass.2=false
+    B:tileframedStainedGlass.3=false
+    B:tileframedStainedGlass.4=false
+    B:tileframedStainedGlass.5=false
+    B:tileframedStainedGlass.6=false
+    B:tileframedStainedGlass.7=false
+    B:tileframedStainedGlass.8=false
+    B:tileframedStainedGlass.9=false
+    B:tilefurnaceBurning=false
+    B:tilefurnaceIdle=false
+    B:tilegoldOre=true
+    B:tileironOre=true
+    B:tilelapisOre=true
+    B:tilelargeBrick=true
+    B:tilelargeBrick.1=true
+    B:tilelargeBrick.2=true
+    B:tilelargeStairs=false
+    B:tilepalmLeaves=false
+    B:tilepalmLog=true
+    B:tilepalmPlanks=true
+    B:tilepalmSapling=false
+    B:tilepapyrus=false
+    B:tilepharaohChest=false
+    B:tileportal=false
+    B:tileredstoneOre=true
+    B:tilesand=true
+    B:tilesandLayer=false
+    B:tileshrub=false
+    B:tileslab=false
+    B:tilesmallBrick=true
+    B:tilesmallStairs=false
+    B:tilesmoothStairs=false
+    B:tilestone=true
+    B:tilethinCrystalGlass=false
+    B:tilethinCrystalStainedGlass=false
+    B:tilethinCrystalStainedGlass.1=false
+    B:tilethinCrystalStainedGlass.10=false
+    B:tilethinCrystalStainedGlass.11=false
+    B:tilethinCrystalStainedGlass.12=false
+    B:tilethinCrystalStainedGlass.13=false
+    B:tilethinCrystalStainedGlass.14=false
+    B:tilethinCrystalStainedGlass.15=false
+    B:tilethinCrystalStainedGlass.2=false
+    B:tilethinCrystalStainedGlass.3=false
+    B:tilethinCrystalStainedGlass.4=false
+    B:tilethinCrystalStainedGlass.5=false
+    B:tilethinCrystalStainedGlass.6=false
+    B:tilethinCrystalStainedGlass.7=false
+    B:tilethinCrystalStainedGlass.8=false
+    B:tilethinCrystalStainedGlass.9=false
+    B:tilethinFramedGlass=false
+    B:tilethinFramedStainedGlass=false
+    B:tilethinFramedStainedGlass.1=false
+    B:tilethinFramedStainedGlass.10=false
+    B:tilethinFramedStainedGlass.11=false
+    B:tilethinFramedStainedGlass.12=false
+    B:tilethinFramedStainedGlass.13=false
+    B:tilethinFramedStainedGlass.14=false
+    B:tilethinFramedStainedGlass.15=false
+    B:tilethinFramedStainedGlass.2=false
+    B:tilethinFramedStainedGlass.3=false
+    B:tilethinFramedStainedGlass.4=false
+    B:tilethinFramedStainedGlass.5=false
+    B:tilethinFramedStainedGlass.6=false
+    B:tilethinFramedStainedGlass.7=false
+    B:tilethinFramedStainedGlass.8=false
+    B:tilethinFramedStainedGlass.9=false
+    B:tilewalls=false
+    B:tileweed=false
+}
+
+
+bettersleeping {
+    B:bettersleepingalarm=false
 }
 
 
@@ -5550,6 +5675,7 @@ gardentrees {
     B:thinlog.12457=false
     B:thinlog.1248=false
     B:thinlog.12499=false
+    B:thinlog.1269=false
     B:thinlog.12699=false
     B:thinlog.12701=false
     B:thinlog.12715=false
@@ -5563,6 +5689,7 @@ gardentrees {
     B:thinlog.12770=false
     B:thinlog.12771=false
     B:thinlog.12849=false
+    B:thinlog.1285=false
     B:thinlog.12850=false
     B:thinlog.12851=false
     B:thinlog.12852=false
@@ -5599,6 +5726,8 @@ gardentrees {
     B:thinlog.13520=false
     B:thinlog.13532=false
     B:thinlog.13536=false
+    B:thinlog.13557=false
+    B:thinlog.13573=false
     B:thinlog.169=false
     B:thinlog.176=false
     B:thinlog.182=false
@@ -5698,6 +5827,8 @@ gardentrees {
     B:thinlog.5328=false
     B:thinlog.5340=false
     B:thinlog.5344=false
+    B:thinlog.5365=false
+    B:thinlog.5381=false
     B:thinlog.561=false
     B:thinlog.562=false
     B:thinlog.563=false
@@ -5782,6 +5913,8 @@ gardentrees {
     B:thinlog.9424=false
     B:thinlog.9436=false
     B:thinlog.9440=false
+    B:thinlog.9461=false
+    B:thinlog.9477=false
     B:thinlogfence=false
     B:thinlogfence.1=false
     B:thinlogfence.1088=false
@@ -5811,6 +5944,7 @@ gardentrees {
     B:thinlogfence.12457=false
     B:thinlogfence.1248=false
     B:thinlogfence.12499=false
+    B:thinlogfence.1269=false
     B:thinlogfence.12699=false
     B:thinlogfence.12701=false
     B:thinlogfence.12715=false
@@ -5824,6 +5958,7 @@ gardentrees {
     B:thinlogfence.12770=false
     B:thinlogfence.12771=false
     B:thinlogfence.12849=false
+    B:thinlogfence.1285=false
     B:thinlogfence.12850=false
     B:thinlogfence.12851=false
     B:thinlogfence.12852=false
@@ -5860,6 +5995,8 @@ gardentrees {
     B:thinlogfence.13520=false
     B:thinlogfence.13532=false
     B:thinlogfence.13536=false
+    B:thinlogfence.13557=false
+    B:thinlogfence.13573=false
     B:thinlogfence.169=false
     B:thinlogfence.176=false
     B:thinlogfence.182=false
@@ -5959,6 +6096,8 @@ gardentrees {
     B:thinlogfence.5328=false
     B:thinlogfence.5340=false
     B:thinlogfence.5344=false
+    B:thinlogfence.5365=false
+    B:thinlogfence.5381=false
     B:thinlogfence.561=false
     B:thinlogfence.562=false
     B:thinlogfence.563=false
@@ -6043,6 +6182,8 @@ gardentrees {
     B:thinlogfence.9424=false
     B:thinlogfence.9436=false
     B:thinlogfence.9440=false
+    B:thinlogfence.9461=false
+    B:thinlogfence.9477=false
 }
 
 
@@ -6367,6 +6508,138 @@ jabba {
 logisticspipes {
     B:logisticsPipeBlock=false
     B:logisticsSolidBlock=false
+}
+
+
+magicalcrops {
+    B:essenceSquare=true
+    B:essenceSquare.1=true
+    B:essenceSquare.2=true
+    B:essenceSquare.3=true
+    B:essenceSquare.4=true
+    B:essenceSquare.5=true
+    B:essenceSquare.6=true
+    B:essenceSquare.7=true
+    B:essenceblock=true
+    B:essenceblock.1=true
+    B:essenceblock.2=true
+    B:essenceblock.3=true
+    B:essenceblock.4=true
+    B:essenceblock.5=true
+    B:essenceblock.6=true
+    B:essenceblock.7=true
+    B:essencebrick=true
+    B:essencebrick.1=true
+    B:essencebrick.2=true
+    B:essencebrick.3=true
+    B:essencebrick.4=true
+    B:essencebrick.5=true
+    B:essencebrick.6=true
+    B:essencebrick.7=true
+    B:essencebrick2=true
+    B:essencebrick2.1=true
+    B:essencebrick2.2=true
+    B:essencebrick2.3=true
+    B:essencebrick2.4=true
+    B:essencebrick2.5=true
+    B:essencebrick2.6=true
+    B:essencebrick2.7=true
+    B:essencelamp=true
+    B:essencelamp.1=true
+    B:essencelamp.2=true
+    B:essencelamp.3=true
+    B:essencelamp.4=true
+    B:essencelamp.5=true
+    B:essencelamp.6=true
+    B:essencelamp.7=true
+    B:essencestorage=true
+    B:essencestorage.1=true
+    B:essencestorage.2=true
+    B:essencestorage.3=true
+    B:essencestorage.4=true
+    B:essencestorage.5=true
+    B:magicalcropsAccioFarmland=false
+    B:magicalcropsAccioFurnace=false
+    B:magicalcropsAccioFurnaceActive=false
+    B:magicalcropsAluminiumCrop=false
+    B:magicalcropsAlumiteCrop=false
+    B:magicalcropsArditeCrop=false
+    B:magicalcropsBlizzCrop=false
+    B:magicalcropsBronzeCrop=false
+    B:magicalcropsCertusQuartzCrop=false
+    B:magicalcropsCobaltCrop=false
+    B:magicalcropsCopperCrop=false
+    B:magicalcropsCropAir=false
+    B:magicalcropsCropBlaze=false
+    B:magicalcropsCropBooster=false
+    B:magicalcropsCropChicken=false
+    B:magicalcropsCropCoal=false
+    B:magicalcropsCropCow=false
+    B:magicalcropsCropCreeper=false
+    B:magicalcropsCropDiamond=false
+    B:magicalcropsCropDye=false
+    B:magicalcropsCropEarth=false
+    B:magicalcropsCropEmerald=false
+    B:magicalcropsCropEnderman=false
+    B:magicalcropsCropExperience=false
+    B:magicalcropsCropFire=false
+    B:magicalcropsCropGhast=false
+    B:magicalcropsCropGlowstone=false
+    B:magicalcropsCropGold=false
+    B:magicalcropsCropIron=false
+    B:magicalcropsCropLapis=false
+    B:magicalcropsCropMinicio=false
+    B:magicalcropsCropNature=false
+    B:magicalcropsCropNether=false
+    B:magicalcropsCropObsidian=false
+    B:magicalcropsCropPig=false
+    B:magicalcropsCropQuartz=false
+    B:magicalcropsCropRedstone=false
+    B:magicalcropsCropSheep=false
+    B:magicalcropsCropSkeleton=false
+    B:magicalcropsCropSlime=false
+    B:magicalcropsCropSpider=false
+    B:magicalcropsCropWater=false
+    B:magicalcropsCropWither=false
+    B:magicalcropsCrucioFarmland=false
+    B:magicalcropsCrucioFurnace=false
+    B:magicalcropsCrucioFurnaceActive=false
+    B:magicalcropsElectrumCrop=false
+    B:magicalcropsEnderiumCrop=false
+    B:magicalcropsEssenceStone=true
+    B:magicalcropsFluixCrop=false
+    B:magicalcropsImperioFarmland=false
+    B:magicalcropsImperioFurnace=false
+    B:magicalcropsImperioFurnaceActive=false
+    B:magicalcropsInvarCrop=false
+    B:magicalcropsLeadCrop=false
+    B:magicalcropsLumiumCrop=false
+    B:magicalcropsManasteelCrop=false
+    B:magicalcropsManyullynCrop=false
+    B:magicalcropsMinicioOre=true
+    B:magicalcropsMinicioOreEnd=true
+    B:magicalcropsMinicioOreNether=true
+    B:magicalcropsNickelCrop=false
+    B:magicalcropsPeridotCrop=false
+    B:magicalcropsPlatinumCrop=false
+    B:magicalcropsRubberCrop=false
+    B:magicalcropsRubyCrop=false
+    B:magicalcropsSaltpeterCrop=false
+    B:magicalcropsSapphireCrop=false
+    B:magicalcropsSignalumCrop=false
+    B:magicalcropsSilverCrop=false
+    B:magicalcropsSteelCrop=false
+    B:magicalcropsSulfurCrop=false
+    B:magicalcropsTerrasteelCrop=false
+    B:magicalcropsTinCrop=false
+    B:magicalcropsUltimateFurnace=false
+    B:magicalcropsUltimateFurnaceActive=false
+    B:magicalcropsWitherProof=true
+    B:magicalcropsWitherProofGlass=true
+    B:magicalcropsYelloriteCrop=false
+    B:magicalcropsZivicioFarmland=false
+    B:magicalcropsZivicioFurnace=false
+    B:magicalcropsZivicioFurnaceActive=false
 }
 
 
@@ -7885,6 +8158,7 @@ railcraft {
     B:machineepsilon.2=false
     B:machineepsilon.3=false
     B:machineepsilon.4=false
+    B:machineepsilon.5=false
     B:machinegamma=false
     B:machinegamma.1=false
     B:machinegamma.2=false
