--- a/config/HardcoreEnderExpansion.cfg
+++ b/config/HardcoreEnderExpansion.cfg
@@ -8,11 +8,18 @@ client {
     B:enableMusic=true
 
     # 0 = enabled on April Fools, 1 = always enabled, 2 = never enabled.
-    I:hardcoreEnderbacon=0
+    I:hardcoreEnderbaconMode=0
+
+    # Removes long delays between vanilla music tracks.
+    B:removeVanillaDelay=false
 }
 
 
 general {
+    S:IMC <
+        Write your message here
+     >
+
     # Starting ID of achievements, only change this if there is a conflict.
     I:achievementStartId=3500
 
@@ -41,7 +48,7 @@ general {
     B:overrideBiomeMobs=false
 
     # This will remove broken recipes that would normally crash the game. ALWAYS REPORT THE RECIPES TO THE AUTHORS OF THE BROKEN MODS FIRST!
-    B:overrideRemoveBrokenRecipes=false
+    B:overrideRemoveBrokenRecipes=true
 
     # Prevents other mods from adding worldgen features to the End.
     B:overrideWorldGen=false
