--- a/config/atg/biome_modifiers.cfg
+++ b/config/atg/biome_modifiers.cfg
@@ -1167,6 +1167,17 @@ TwilightForest {
 }
 
 
+atum {
+
+    "Atum's Desert" {
+        B:AllowVillages=true
+        B:Enable=true
+        D:OccuranceMultiplier=1.0
+    }
+
+}
+
+
 erebus {
 
     "Undergound Jungle" {
