--- a/config/bigtrees/individualbiomes.cfg
+++ b/config/bigtrees/individualbiomes.cfg
@@ -4227,6 +4227,37 @@
     S:"chylex.Sky Tall Oak Autumn"=
     S:"chylex.Sky Tall Oak Brown"=
     S:"chylex.Sky Yellow Big Birch"=
+    S:"com.Atum's Desert Big Birch 0"=
+    S:"com.Atum's Desert Big Birch 1"=
+    S:"com.Atum's Desert Big Pine 0"=
+    S:"com.Atum's Desert Big Pine 1"=
+    S:"com.Atum's Desert Block Maple"=
+    S:"com.Atum's Desert Block Oak 0"=
+    S:"com.Atum's Desert Block Oak Autumn"=
+    S:"com.Atum's Desert Block Oak Brown"=
+    S:"com.Atum's Desert Block Oak Dark"=
+    S:"com.Atum's Desert Cyprus Oak 0"=
+    S:"com.Atum's Desert Cyprus Willow"=
+    S:"com.Atum's Desert Dark Hat"=
+    S:"com.Atum's Desert Dead Tree 0"=
+    S:"com.Atum's Desert Great Oak 0"=
+    S:"com.Atum's Desert Great Oak Autumn"=
+    S:"com.Atum's Desert Great Oak Brown"=
+    S:"com.Atum's Desert Great Oak Dark"=
+    S:"com.Atum's Desert Hat Sacred Tree"=
+    S:"com.Atum's Desert Hat Tree 0"=
+    S:"com.Atum's Desert Pertrified Dead Tree"=
+    S:"com.Atum's Desert Swamp Oak 0"=
+    S:"com.Atum's Desert Tall Cherry"=
+    S:"com.Atum's Desert Tall Dark Oak"=
+    S:"com.Atum's Desert Tall Fir"=
+    S:"com.Atum's Desert Tall Jacaranda"=
+    S:"com.Atum's Desert Tall Magic Tree"=
+    S:"com.Atum's Desert Tall Maple"=
+    S:"com.Atum's Desert Tall Oak 0"=
+    S:"com.Atum's Desert Tall Oak Autumn"=
+    S:"com.Atum's Desert Tall Oak Brown"=
+    S:"com.Atum's Desert Yellow Big Birch"=
     S:"drzhark.WyvernBiome Big Birch 0"=
     S:"drzhark.WyvernBiome Big Birch 1"=
     S:"drzhark.WyvernBiome Big Pine 0"=
