--- a/config/Botania.cfg
+++ b/config/Botania.cfg
@@ -619,70 +619,104 @@ shedding {
     I:GrimoireOfGaia.Yuki-Onna.lexiconDisplaySize=40
     I:GrimoireOfGaia.Yuki-Onna.metadata=0
     I:GrimoireOfGaia.Yuki-Onna.rate=-1
+
+    # Configuration of Shedding for HardcoreEnderExpansion.AngryEnderman
     S:HardcoreEnderExpansion.AngryEnderman.item=
     I:HardcoreEnderExpansion.AngryEnderman.lexiconDisplaySize=40
     I:HardcoreEnderExpansion.AngryEnderman.metadata=0
     I:HardcoreEnderExpansion.AngryEnderman.rate=-1
+
+    # Configuration of Shedding for HardcoreEnderExpansion.BabyEnderman
     S:HardcoreEnderExpansion.BabyEnderman.item=
     I:HardcoreEnderExpansion.BabyEnderman.lexiconDisplaySize=40
     I:HardcoreEnderExpansion.BabyEnderman.metadata=0
     I:HardcoreEnderExpansion.BabyEnderman.rate=-1
+
+    # Configuration of Shedding for HardcoreEnderExpansion.Dragon
     S:HardcoreEnderExpansion.Dragon.item=
     I:HardcoreEnderExpansion.Dragon.lexiconDisplaySize=40
     I:HardcoreEnderExpansion.Dragon.metadata=0
     I:HardcoreEnderExpansion.Dragon.rate=-1
+
+    # Configuration of Shedding for HardcoreEnderExpansion.EnderDemon
     S:HardcoreEnderExpansion.EnderDemon.item=
     I:HardcoreEnderExpansion.EnderDemon.lexiconDisplaySize=40
     I:HardcoreEnderExpansion.EnderDemon.metadata=0
     I:HardcoreEnderExpansion.EnderDemon.rate=-1
+
+    # Configuration of Shedding for HardcoreEnderExpansion.EnderEye
     S:HardcoreEnderExpansion.EnderEye.item=
     I:HardcoreEnderExpansion.EnderEye.lexiconDisplaySize=40
     I:HardcoreEnderExpansion.EnderEye.metadata=0
     I:HardcoreEnderExpansion.EnderEye.rate=-1
+
+    # Configuration of Shedding for HardcoreEnderExpansion.EnderGuardian
     S:HardcoreEnderExpansion.EnderGuardian.item=
     I:HardcoreEnderExpansion.EnderGuardian.lexiconDisplaySize=40
     I:HardcoreEnderExpansion.EnderGuardian.metadata=0
     I:HardcoreEnderExpansion.EnderGuardian.rate=-1
+
+    # Configuration of Shedding for HardcoreEnderExpansion.Endermage
     S:HardcoreEnderExpansion.Endermage.item=
     I:HardcoreEnderExpansion.Endermage.lexiconDisplaySize=40
     I:HardcoreEnderExpansion.Endermage.metadata=0
     I:HardcoreEnderExpansion.Endermage.rate=-1
+
+    # Configuration of Shedding for HardcoreEnderExpansion.FireFiend
     S:HardcoreEnderExpansion.FireFiend.item=
     I:HardcoreEnderExpansion.FireFiend.lexiconDisplaySize=40
     I:HardcoreEnderExpansion.FireFiend.metadata=0
     I:HardcoreEnderExpansion.FireFiend.rate=-1
+
+    # Configuration of Shedding for HardcoreEnderExpansion.FireGolem
     S:HardcoreEnderExpansion.FireGolem.item=
     I:HardcoreEnderExpansion.FireGolem.lexiconDisplaySize=40
     I:HardcoreEnderExpansion.FireGolem.metadata=0
     I:HardcoreEnderExpansion.FireGolem.rate=-1
+
+    # Configuration of Shedding for HardcoreEnderExpansion.ForestGhost
     S:HardcoreEnderExpansion.ForestGhost.item=
     I:HardcoreEnderExpansion.ForestGhost.lexiconDisplaySize=40
     I:HardcoreEnderExpansion.ForestGhost.metadata=0
     I:HardcoreEnderExpansion.ForestGhost.rate=-1
+
+    # Configuration of Shedding for HardcoreEnderExpansion.HauntedMiner
     S:HardcoreEnderExpansion.HauntedMiner.item=
     I:HardcoreEnderExpansion.HauntedMiner.lexiconDisplaySize=40
     I:HardcoreEnderExpansion.HauntedMiner.metadata=0
     I:HardcoreEnderExpansion.HauntedMiner.rate=-1
+
+    # Configuration of Shedding for HardcoreEnderExpansion.HomelandEnderman
     S:HardcoreEnderExpansion.HomelandEnderman.item=
     I:HardcoreEnderExpansion.HomelandEnderman.lexiconDisplaySize=40
     I:HardcoreEnderExpansion.HomelandEnderman.metadata=0
     I:HardcoreEnderExpansion.HomelandEnderman.rate=-1
+
+    # Configuration of Shedding for HardcoreEnderExpansion.InfestedBat
     S:HardcoreEnderExpansion.InfestedBat.item=
     I:HardcoreEnderExpansion.InfestedBat.lexiconDisplaySize=40
     I:HardcoreEnderExpansion.InfestedBat.metadata=0
     I:HardcoreEnderExpansion.InfestedBat.rate=-1
+
+    # Configuration of Shedding for HardcoreEnderExpansion.Louse
     S:HardcoreEnderExpansion.Louse.item=
     I:HardcoreEnderExpansion.Louse.lexiconDisplaySize=40
     I:HardcoreEnderExpansion.Louse.metadata=0
     I:HardcoreEnderExpansion.Louse.rate=-1
+
+    # Configuration of Shedding for HardcoreEnderExpansion.ParalyzedEnderman
     S:HardcoreEnderExpansion.ParalyzedEnderman.item=
     I:HardcoreEnderExpansion.ParalyzedEnderman.lexiconDisplaySize=40
     I:HardcoreEnderExpansion.ParalyzedEnderman.metadata=0
     I:HardcoreEnderExpansion.ParalyzedEnderman.rate=-1
+
+    # Configuration of Shedding for HardcoreEnderExpansion.ScorchedLens
     S:HardcoreEnderExpansion.ScorchedLens.item=
     I:HardcoreEnderExpansion.ScorchedLens.lexiconDisplaySize=40
     I:HardcoreEnderExpansion.ScorchedLens.metadata=0
     I:HardcoreEnderExpansion.ScorchedLens.rate=-1
+
+    # Configuration of Shedding for HardcoreEnderExpansion.VampireBat
     S:HardcoreEnderExpansion.VampireBat.item=
     I:HardcoreEnderExpansion.VampireBat.lexiconDisplaySize=40
     I:HardcoreEnderExpansion.VampireBat.metadata=0
@@ -1417,6 +1451,66 @@ shedding {
     I:Zombie.lexiconDisplaySize=40
     I:Zombie.metadata=0
     I:Zombie.rate=-1
+
+    # Configuration of Shedding for atum.banditArcher
+    S:atum.banditArcher.item=
+    I:atum.banditArcher.lexiconDisplaySize=40
+    I:atum.banditArcher.metadata=0
+    I:atum.banditArcher.rate=-1
+
+    # Configuration of Shedding for atum.banditWarlord
+    S:atum.banditWarlord.item=
+    I:atum.banditWarlord.lexiconDisplaySize=40
+    I:atum.banditWarlord.metadata=0
+    I:atum.banditWarlord.rate=-1
+
+    # Configuration of Shedding for atum.banditWarrior
+    S:atum.banditWarrior.item=
+    I:atum.banditWarrior.lexiconDisplaySize=40
+    I:atum.banditWarrior.metadata=0
+    I:atum.banditWarrior.rate=-1
+
+    # Configuration of Shedding for atum.barbarian
+    S:atum.barbarian.item=
+    I:atum.barbarian.lexiconDisplaySize=40
+    I:atum.barbarian.metadata=0
+    I:atum.barbarian.rate=-1
+
+    # Configuration of Shedding for atum.desertGhost
+    S:atum.desertGhost.item=
+    I:atum.desertGhost.lexiconDisplaySize=40
+    I:atum.desertGhost.metadata=0
+    I:atum.desertGhost.rate=-1
+
+    # Configuration of Shedding for atum.desertWolf
+    S:atum.desertWolf.item=
+    I:atum.desertWolf.lexiconDisplaySize=40
+    I:atum.desertWolf.metadata=0
+    I:atum.desertWolf.rate=-1
+
+    # Configuration of Shedding for atum.dustySkeleton
+    S:atum.dustySkeleton.item=
+    I:atum.dustySkeleton.lexiconDisplaySize=40
+    I:atum.dustySkeleton.metadata=0
+    I:atum.dustySkeleton.rate=-1
+
+    # Configuration of Shedding for atum.mummy
+    S:atum.mummy.item=
+    I:atum.mummy.lexiconDisplaySize=40
+    I:atum.mummy.metadata=0
+    I:atum.mummy.rate=-1
+
+    # Configuration of Shedding for atum.pharaoh
+    S:atum.pharaoh.item=
+    I:atum.pharaoh.lexiconDisplaySize=40
+    I:atum.pharaoh.metadata=0
+    I:atum.pharaoh.rate=-1
+
+    # Configuration of Shedding for atum.stoneSoldier
+    S:atum.stoneSoldier.item=
+    I:atum.stoneSoldier.lexiconDisplaySize=40
+    I:atum.stoneSoldier.metadata=0
+    I:atum.stoneSoldier.rate=-1
 
     # Configuration of Shedding for chisel.snowman
     S:chisel.snowman.item=
