--- a/config/fastcraft.ini
+++ b/config/fastcraft.ini
@@ -1,5 +1,5 @@
 ; FastCraft config
-; created Apr 24, 2015 4:51:14 PM
+; created Apr 25, 2015 10:34:28 AM
 ;---
 
 ; Settings purely affecting performance, but not gameplay.
