Final 0.3 Updates - pre push

--- a/config/IguanaTinkerTweaks/main.cfg
+++ b/config/IguanaTinkerTweaks/main.cfg
@@ -313,7 +313,7 @@ tweaks {
     B:easyToolBuildingForge=false
 
     # Allows to repair your tool in a crafting grid, without tool station [default: true]
-    B:easyToolRepair=false
+    B:easyToolRepair=true
 
     # How many gravel are required to craft one Flint [range: 1 ~ 9, default: 3]
     I:gravelPerFlint=3
