--- a/config/Waila.cfg
+++ b/config/Waila.cfg
@@ -58,6 +58,20 @@ modules {
     B:facades.hidden=true
     B:general.showcrop=true
     B:general.showhp=true
+    B:harvestability.currentlyharvestable=true
+    B:harvestability.currentlyharvestable.sneakingonly=false
+    B:harvestability.effectivetool=true
+    B:harvestability.effectivetool.sneakingonly=false
+    B:harvestability.harvestlevel=true
+    B:harvestability.harvestlevel.sneakingonly=false
+    B:harvestability.minimal=false
+    B:harvestability.oresonly=false
+    B:harvestability.shearability=true
+    B:harvestability.shearability.sneakingonly=false
+    B:harvestability.silktouchability=true
+    B:harvestability.silktouchability.sneakingonly=false
+    B:harvestability.toolrequiredonly=true
+    B:harvestability.unharvestableonly=false
     B:oc.address=true
     B:oc.componentName=true
     B:oc.energy=true
@@ -124,6 +138,20 @@ server_forcing {
     B:facades.hidden=false
     B:general.showcrop=false
     B:general.showhp=false
+    B:harvestability.currentlyharvestable=false
+    B:harvestability.currentlyharvestable.sneakingonly=false
+    B:harvestability.effectivetool=false
+    B:harvestability.effectivetool.sneakingonly=false
+    B:harvestability.harvestlevel=false
+    B:harvestability.harvestlevel.sneakingonly=false
+    B:harvestability.minimal=false
+    B:harvestability.oresonly=false
+    B:harvestability.shearability=false
+    B:harvestability.shearability.sneakingonly=false
+    B:harvestability.silktouchability=false
+    B:harvestability.silktouchability.sneakingonly=false
+    B:harvestability.toolrequiredonly=false
+    B:harvestability.unharvestableonly=false
     B:oc.address=false
     B:oc.componentName=false
     B:oc.energy=false
