--- a/config/biomesoplenty/misc.cfg
+++ b/config/biomesoplenty/misc.cfg
@@ -9,7 +9,7 @@
 "miscellanious settings" {
     B:"Add Custom Dungeon Loot"=true
     B:"Behave Normally During Special Events"=false
-    B:"Enable Biomes O' Plenty Main Menu Panorama"=true
+    B:"Enable Biomes O' Plenty Main Menu Panorama"=false
     B:"Enable Spring Water Regeneration Effect"=true
 }
 
