--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,10 +4,10 @@
   url: https://github.com/Haggle1996/RevolutionPack
 
 - title: Your First Day
-  url: https://github.com/Haggle1996/RevolutionPack/wiki/Your-First-Day
+  url: /articles/your-first-day
 
 - title: Gameplay Changes
-  url: https://github.com/Haggle1996/RevolutionPack/wiki/Gameplay-Changes
+  url: /articles/game-changes
 
 - title: Forum
   url: http://www.minecraftforum.net/forums/mapping-and-modding/minecraft-mods/mod-packs/2411393-revolution-rotarycraft-themed-progression-pack-on
