Fixed mods.xml so Reika's no longer downloads

--- a/config/fastcraft.ini
+++ b/config/fastcraft.ini
@@ -1,5 +1,5 @@
 ; FastCraft config
-; created Apr 25, 2015 11:35:06 AM
+; created Apr 25, 2015 2:46:37 PM
 ;---
 
 ; Settings purely affecting performance, but not gameplay.
