--- a/config/Galacticraft/core.conf
+++ b/config/Galacticraft/core.conf
@@ -11,6 +11,7 @@ dimensions {
     I:"Dimensions where rockets cannot launch" <
         -1
         1
+		2
      >
 
     # If true, rockets will be unable to reach the Overworld (only use this in special modpacks!)
@@ -93,6 +94,7 @@ general {
 
     # Enter IDs of other mods' ores here for Galacticraft to generate them on the Moon and other planets. Format is BlockName or BlockName:metadata. Use optional parameters at end of each line: /RARE /UNCOMMON or /COMMON for rarity in a chunk; /DEEP /SHALLOW or /BOTH for height; /SINGLE /STANDARD or /LARGE for clump size; /XTRARANDOM for ores sometimes there sometimes not at all.  /ONLYMOON or /ONLYMARS if wanted on one planet only.  If nothing specified, defaults are /COMMON, /BOTH and /STANDARD.  Repeat lines to generate a huge quantity of ores.
     S:"Other mods ores for GC to generate on the Moon and planets" <
+		magicalcrops:magicalcrops_MinicioOre /UNCOMMON /DEEP /STANDARD /ONLYMARS
      >
 
     # If this is enabled, debug messages will appear in the console. This is useful for finding bugs in the mod.
@@ -119,6 +121,21 @@ general {
     # List non-opaque blocks from other mods (for example, special types of glass) that the Oxygen Sealer should recognize as solid seals. Format is BlockName or BlockName:metadata
     S:"External Sealable IDs" <
         minecraft:glass_pane:0
+		minecraft:stained_glass_pane:1
+        minecraft:stained_glass_pane:2
+        minecraft:stained_glass_pane:3
+        minecraft:stained_glass_pane:4
+        minecraft:stained_glass_pane:5
+        minecraft:stained_glass_pane:6
+        minecraft:stained_glass_pane:7
+        minecraft:stained_glass_pane:8
+        minecraft:stained_glass_pane:9
+        minecraft:stained_glass_pane:10
+        minecraft:stained_glass_pane:11
+        minecraft:stained_glass_pane:12
+        minecraft:stained_glass_pane:13
+        minecraft:stained_glass_pane:14
+        minecraft:stained_glass_pane:15
      >
 
     # List blocks from other mods that the Sensor Glasses should recognize as solid blocks. Format is BlockName or BlockName:metadata.
@@ -142,7 +159,7 @@ general {
     D:"Dungeon Boss Health Modifier"=1.0
 
     # Set this to true for increased difficulty in modpacks (see forum for more info).
-    B:"Harder Difficulty"=false
+    B:"Harder Difficulty"=true
 
     # Set this to true for less metal use in Galacticraft recipes (makes the game easier).
     B:"Quick Game Mode"=false
@@ -166,7 +183,7 @@ general {
     S:"Default key to toggle advanced goggles behaviour - Useful for modpacks"=KEY_K
 
     # The normal factor is 1.  Increase this to 2 - 5 if other mods with a lot of oil (e.g. BuildCraft) are installed to increase GC rocket fuel requirement.
-    I:"Rocket fuel factor"=1
+    I:"Rocket fuel factor"=2
 }
 
 
