Config file changes.

--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -2064,6 +2064,7 @@ botania {
     B:buriedPetals.8=false
     B:buriedPetals.9=false
     B:conjurationCatalyst=true
+    B:corporeaCrystalCube=false
     B:corporeaFunnel=false
     B:corporeaIndex=false
     B:corporeaInterceptor=false
@@ -7281,6 +7282,7 @@ openblocks {
     B:path=false
     B:projector=false
     B:ropeladder=false
+    B:scaffolding=false
     B:sky=false
     B:sponge=false
     B:sprinkler=false
@@ -8448,7 +8450,9 @@ stevesworkshop {
 
 storagedrawers {
     B:compDrawers=false
+    B:compDrawersSort=false
     B:controller=false
+    B:controllerSlave=false
     B:fullDrawers1=false
     B:fullDrawers1.1=false
     B:fullDrawers1.2=false
@@ -8467,6 +8471,24 @@ storagedrawers {
     B:fullDrawers4.3=false
     B:fullDrawers4.4=false
     B:fullDrawers4.5=false
+    B:fullDrawersSort1=false
+    B:fullDrawersSort1.1=false
+    B:fullDrawersSort1.2=false
+    B:fullDrawersSort1.3=false
+    B:fullDrawersSort1.4=false
+    B:fullDrawersSort1.5=false
+    B:fullDrawersSort2=false
+    B:fullDrawersSort2.1=false
+    B:fullDrawersSort2.2=false
+    B:fullDrawersSort2.3=false
+    B:fullDrawersSort2.4=false
+    B:fullDrawersSort2.5=false
+    B:fullDrawersSort4=false
+    B:fullDrawersSort4.1=false
+    B:fullDrawersSort4.2=false
+    B:fullDrawersSort4.3=false
+    B:fullDrawersSort4.4=false
+    B:fullDrawersSort4.5=false
     B:halfDrawers2=false
     B:halfDrawers2.1=false
     B:halfDrawers2.2=false
@@ -8479,6 +8501,24 @@ storagedrawers {
     B:halfDrawers4.3=false
     B:halfDrawers4.4=false
     B:halfDrawers4.5=false
+    B:halfDrawersSort2=false
+    B:halfDrawersSort2.1=false
+    B:halfDrawersSort2.2=false
+    B:halfDrawersSort2.3=false
+    B:halfDrawersSort2.4=false
+    B:halfDrawersSort2.5=false
+    B:halfDrawersSort4=false
+    B:halfDrawersSort4.1=false
+    B:halfDrawersSort4.2=false
+    B:halfDrawersSort4.3=false
+    B:halfDrawersSort4.4=false
+    B:halfDrawersSort4.5=false
+    B:trim=true
+    B:trim.1=true
+    B:trim.2=true
+    B:trim.3=true
+    B:trim.4=true
+    B:trim.5=true
 }
 
 
