--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,6 @@
 # Site navigation links
 
-- title: About
+- title: Github
   url: https://github.com/Haggle1996/RevolutionPack
 
 - title: Your First Day
