First pass updates to configs

--- a/config/GrimoireOfGaia.cfg
+++ b/config/GrimoireOfGaia.cfg
@@ -3,59 +3,59 @@
 "base damage" {
     # If BaseDamage is set to true, all mobs will deal 1.0 piercing damage (ignores armor).
     S:" "= 
-    B:BaseDamage=true
+    B:BaseDamage=false
 }
 
 
 general {
     # Spawn Rate. Set to 0 to disable mob from spawning. Recommended: 10> Day, <100 Night
     S:" "= 
-    I:SpawnRateAnubis=60
-    I:SpawnRateBanshee=60
-    I:SpawnRateBaphomet=8
-    I:SpawnRateBoneKnight=60
+    I:SpawnRateAnubis=30
+    I:SpawnRateBanshee=30
+    I:SpawnRateBaphomet=4
+    I:SpawnRateBoneKnight=30
     I:SpawnRateCentaur=24
     I:SpawnRateCobbleGolem=16
-    I:SpawnRateCobblestoneGolem=60
-    I:SpawnRateCockatrice=24
-    I:SpawnRateCreep=80
+    I:SpawnRateCobblestoneGolem=40
+    I:SpawnRateCockatrice=4
+    I:SpawnRateCreep=40
     I:SpawnRateCyclops=12
-    I:SpawnRateDhampir=60
+    I:SpawnRateDhampir=40
     I:SpawnRateDryad=16
-    I:SpawnRateDullahan=80
+    I:SpawnRateDullahan=40
     I:SpawnRateEnderDragonGirl=12
     I:SpawnRateEnderEye=60
     I:SpawnRateFleshLich=40
-    I:SpawnRateFutakuchiOnna=80
-    I:SpawnRateGryphon=16
-    I:SpawnRateHarpy=24
+    I:SpawnRateFutakuchiOnna=40
+    I:SpawnRateGryphon=4
+    I:SpawnRateHarpy=2
     I:SpawnRateHunter=24
-    I:SpawnRateJorogumo=60
+    I:SpawnRateJorogumo=40
     I:SpawnRateMermaid=60
     I:SpawnRateMimic=40
     I:SpawnRateMinotaur=40
-    I:SpawnRateMinotaurus=60
-    I:SpawnRateNaga=12
-    I:SpawnRateNineTails=60
-    I:SpawnRateSahuagin=80
+    I:SpawnRateMinotaurus=30
+    I:SpawnRateNaga=3
+    I:SpawnRateNineTails=40
+    I:SpawnRateSahuagin=40
     I:SpawnRateSatyr=24
-    I:SpawnRateSelkie=12
-    I:SpawnRateShaman=60
-    I:SpawnRateSharko=60
-    I:SpawnRateSiren=16
+    I:SpawnRateSelkie=2
+    I:SpawnRateShaman=40
+    I:SpawnRateSharko=40
+    I:SpawnRateSiren=3
     I:SpawnRateSpawnMandragora=12
     I:SpawnRateSphinx=40
-    I:SpawnRateSpriggan=60
+    I:SpawnRateSpriggan=30
     I:SpawnRateSuccubus=16
-    I:SpawnRateSwamper=60
-    I:SpawnRateValkyrie=8
+    I:SpawnRateSwamper=30
+    I:SpawnRateValkyrie=1
     I:SpawnRateVampire=40
-    I:SpawnRateWerecat=80
+    I:SpawnRateWerecat=40
     I:SpawnRateWitch=10
     I:SpawnRateWitherCow=12
-    I:SpawnRateYeti=16
+    I:SpawnRateYeti=4
     I:SpawnRateYukiOnna=18
-    I:SpawnSludgeGirl=80
+    I:SpawnSludgeGirl=40
 }
 
 
