--- a/config/RandomThings.cfg
+++ b/config/RandomThings.cfg
@@ -88,13 +88,13 @@ settings {
     I:BloodMoonSpawnLimitMult=3
 
     # How close can enemys spawn next to the player on a bloodmoon in blocks? (Vanilla=24)
-    I:BloodMoonSpawnRange=3
+    I:BloodMoonSpawnRange=10
 
     # How much faster enemys spawn on a bloodmoon (0=Vanilla)
     I:BloodMoonSpawnSpeed=3
 
     # Whether players in the overworld should receive a message at the beginning of the bloodmoon
-    B:BloodmoonMessage=true
+    B:BloodmoonMessage=false
 
     # Whether the Bloodmoon should respect the doMobSpawning gamerule
     B:BloodmoonRespectGamerule=true
