--- a/config/Reika/RotaryCraft.cfg
+++ b/config/Reika/RotaryCraft.cfg
@@ -117,7 +117,7 @@
     I:"Spawner Mob Limit"=128
     I:"Sprinkler Particle Density"=4
     B:"Terraformer Block Editing"=true
-    B:"Tools Clear Chat"=true
+    B:"Tools Clear Chat"=false
     B:"Turrets can target players"=true
     B:"Tutorial Mode"=false
 }
