--- a/config/OpenBlocks.cfg
+++ b/config/OpenBlocks.cfg
@@ -152,7 +152,7 @@ features {
     I:flimFlamEnchantmentId=213
 
     # Should every player get info book on first login
-    B:infoBook=true
+    B:infoBook=false
 
     # Id of last stand enchantment
     I:lastStandEnchantmentId=212
@@ -313,7 +313,7 @@ tanks {
     I:bucketsPerTank=16
 
     # Should filled tanks be searchable with creative menu
-    B:displayAllFluids=true
+    B:displayAllFluids=false
 
     # Tanks will emit light when they contain a liquid that glows (eg. lava)
     B:emitLight=true
