--- a/config/JABBA.cfg
+++ b/config/JABBA.cfg
@@ -15,7 +15,7 @@ general {
         0
         0
      >
-    B:diamondDollyActive=false
+    B:diamondDollyActive=true
 
     # A structural tier will be created for each material in this list, even if not craftable
     S:materialList <
