--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -8,6 +8,12 @@ amtgen {
 }
 
 
+aobd {
+    B:blockCadmium=true
+    B:blockIndium=true
+}
+
+
 appliedenergistics2 {
     B:tileBlockCellWorkbench=false
     B:tileBlockCharger=false
@@ -5031,6 +5037,9 @@ extrautilities {
     B:etherealglass=false
     B:etherealglass.1=false
     B:etherealglass.2=false
+    B:etherealglass.3=false
+    B:etherealglass.4=false
+    B:etherealglass.5=false
     B:extractorbase=false
     B:extractorbase.12=false
     B:extractorbase.13=false
@@ -6412,6 +6421,11 @@ hardcorequesting {
     B:itembarrel=false
     B:questportal=false
     B:questtracker=false
+}
+
+
+hatstand {
+    B:hatsaddonhatstandsblock=false
 }
 
 
@@ -8409,6 +8423,12 @@ statues {
 }
 
 
+stevesaddons {
+    B:cableae=false
+    B:cablerf=false
+}
+
+
 stevescarts {
     B:BlockActivator=false
     B:BlockAdvDetector=false
@@ -9151,6 +9171,25 @@ twilightforest {
     B:tileUberousSoil=false
     B:tileUnripeTrollBer=false
     B:tileWispyCloud=false
+}
+
+
+yegamolchattels {
+    B:flaxplant=false
+    B:gong=false
+    B:grandfatherClock=false
+    B:grindstone=false
+    B:lootchest=false
+    B:microblock=false
+    B:pedestal=false
+    B:planksaw=false
+    B:statue=false
+    B:tablepress=false
+    B:tikiTorch=false
+    B:treasurePile=false
+    B:weaponRack=false
+    B:ygcItemShelf=false
+    B:ygcSnowGlobe=false
 }
 
 
