--- a/config/ExtraUtilities.cfg
+++ b/config/ExtraUtilities.cfg
@@ -85,7 +85,9 @@ options {
      >
     I:deepDarkDimensionID=-100
     B:disableEnderPumpInAllDimensions=false
+    B:disableTransferNodeCobblegen=false
     B:disableTransferNodeParticles=false
+    B:disableTransferNodeWatergen=false
     B:disableWitherNoisesIfNotNearby=true
     I:lastMilleniumDimensionID=-112
     B:peacefulTableInAllDifficulties=false
