--- a/config/Galacticraft/core.conf
+++ b/config/Galacticraft/core.conf
@@ -11,7 +11,7 @@ dimensions {
     I:"Dimensions where rockets cannot launch" <
         -1
         1
-		2
+        2
      >
 
     # If true, rockets will be unable to reach the Overworld (only use this in special modpacks!)
@@ -87,14 +87,17 @@ general {
     B:"Disable Moon Village Gen"=false
 
     # If this is enabled, other mods' standard ores and all other features (eg. plants) can generate on the Moon and planets. Apart from looking wrong, this make cause 'Already Decorating!' type crashes.  NOT RECOMMENDED!  See Wiki.
-    B:"Generate other mods features on planets"=false
+    B:"Generate all other mods features on planets"=false
+
+    # If generate other mods features is disabled as recommended, this setting can whitelist CoFHCore custom worldgen on planets.
+    B:"Whitelist CoFHCore worldgen to generate its ores and lakes on planets"=false
 
     # If ThaumCraft is installed, ThaumCraft wild nodes can generate on the Moon and planets.
     B:"Generate ThaumCraft wild nodes on planetary surfaces"=true
 
     # Enter IDs of other mods' ores here for Galacticraft to generate them on the Moon and other planets. Format is BlockName or BlockName:metadata. Use optional parameters at end of each line: /RARE /UNCOMMON or /COMMON for rarity in a chunk; /DEEP /SHALLOW or /BOTH for height; /SINGLE /STANDARD or /LARGE for clump size; /XTRARANDOM for ores sometimes there sometimes not at all.  /ONLYMOON or /ONLYMARS if wanted on one planet only.  If nothing specified, defaults are /COMMON, /BOTH and /STANDARD.  Repeat lines to generate a huge quantity of ores.
     S:"Other mods ores for GC to generate on the Moon and planets" <
-		magicalcrops:magicalcrops_MinicioOre /UNCOMMON /DEEP /STANDARD /ONLYMARS
+        magicalcrops:magicalcrops_MinicioOre /UNCOMMON /DEEP /STANDARD /ONLYMARS
      >
 
     # If this is enabled, debug messages will appear in the console. This is useful for finding bugs in the mod.
@@ -121,7 +124,7 @@ general {
     # List non-opaque blocks from other mods (for example, special types of glass) that the Oxygen Sealer should recognize as solid seals. Format is BlockName or BlockName:metadata
     S:"External Sealable IDs" <
         minecraft:glass_pane:0
-		minecraft:stained_glass_pane:1
+        minecraft:stained_glass_pane:1
         minecraft:stained_glass_pane:2
         minecraft:stained_glass_pane:3
         minecraft:stained_glass_pane:4
@@ -174,16 +177,26 @@ general {
     S:"OreDict name of other mod's silicon usable in Galacticraft"=itemSilicon
 
     # Leave 'KEY_' value, adding the intended keyboard character to replace the letter. Values 0-9 and A-Z are accepted
-    S:"Default key for opening in-game galaxy map - Useful for modpacks"=KEY_M
+    S:"Open Galaxy Map"=KEY_M
 
     # Leave 'KEY_' value, adding the intended keyboard character to replace the letter. Values 0-9 and A-Z are accepted
-    S:"Default key for opening fuel levels gui - Useful for modpacks"=KEY_F
+    S:"Open Fuel GUI"=KEY_F
 
     # Leave 'KEY_' value, adding the intended keyboard character to replace the letter. Values 0-9 and A-Z are accepted
-    S:"Default key to toggle advanced goggles behaviour - Useful for modpacks"=KEY_K
+    S:"Toggle Advanced Goggles"=KEY_K
 
     # The normal factor is 1.  Increase this to 2 - 5 if other mods with a lot of oil (e.g. BuildCraft) are installed to increase GC rocket fuel requirement.
     I:"Rocket fuel factor"=2
+
+    # Increase to make the mouse drag scroll more sensitive, decrease to lower sensitivity.
+    D:"Map Scroll Mouse Sensitivity"=1.0
+
+    # Set to true to invert the mouse scroll feature on the galaxy map.
+    B:"Map Scroll Mouse Invert"=false
+    S:"Default key for opening fuel levels gui - Useful for modpacks"=KEY_F
+    S:"Default key for opening in-game galaxy map - Useful for modpacks"=KEY_M
+    S:"Default key to toggle advanced goggles behaviour - Useful for modpacks"=KEY_K
+    B:"Generate other mods features on planets"=false
 }
 
 
