--- a/config/Botania.cfg
+++ b/config/Botania.cfg
@@ -749,26 +749,18 @@ shedding {
     I:MushroomCow.lexiconDisplaySize=40
     I:MushroomCow.metadata=0
     I:MushroomCow.rate=-1
-
-    # Configuration of Shedding for Natura.FlameSpider
     S:Natura.FlameSpider.item=
     I:Natura.FlameSpider.lexiconDisplaySize=40
     I:Natura.FlameSpider.metadata=0
     I:Natura.FlameSpider.rate=-1
-
-    # Configuration of Shedding for Natura.FlameSpiderBaby
     S:Natura.FlameSpiderBaby.item=
     I:Natura.FlameSpiderBaby.lexiconDisplaySize=40
     I:Natura.FlameSpiderBaby.metadata=0
     I:Natura.FlameSpiderBaby.rate=-1
-
-    # Configuration of Shedding for Natura.Imp
     S:Natura.Imp.item=
     I:Natura.Imp.lexiconDisplaySize=40
     I:Natura.Imp.metadata=0
     I:Natura.Imp.rate=-1
-
-    # Configuration of Shedding for Natura.NitroCreeper
     S:Natura.NitroCreeper.item=
     I:Natura.NitroCreeper.lexiconDisplaySize=40
     I:Natura.NitroCreeper.metadata=0
@@ -2013,6 +2005,18 @@ shedding {
     I:witherSkeleton.lexiconDisplaySize=40
     I:witherSkeleton.metadata=0
     I:witherSkeleton.rate=-1
+
+    # Configuration of Shedding for yegamolchattels.fakePlayer
+    S:yegamolchattels.fakePlayer.item=
+    I:yegamolchattels.fakePlayer.lexiconDisplaySize=40
+    I:yegamolchattels.fakePlayer.metadata=0
+    I:yegamolchattels.fakePlayer.rate=-1
+
+    # Configuration of Shedding for ygcGhost
+    S:ygcGhost.item=
+    I:ygcGhost.lexiconDisplaySize=40
+    I:ygcGhost.metadata=0
+    I:ygcGhost.rate=-1
 }
 
 
